--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -4,7 +4,7 @@
 	<!-- http://maven.apache.org/pom.html#Quick_Overview -->
 
 	<groupId>example.grpc</groupId>
-	<artifactId>hello-world-contract</artifactId>
+	<artifactId>hello-grpc-contract</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -22,12 +22,14 @@
 		<maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
 
 		<!-- gRPC properties -->
-		<grpc.version>1.23.0</grpc.version>
-		<protobuf.version>3.9.0</protobuf.version>
-		<protoc.version>3.8.0</protoc.version>
+		<grpc.version>1.28.0</grpc.version>
+		<protobuf.version>3.11.0</protobuf.version>
+		<protoc.version>3.11.4</protoc.version>
 		<!-- tcnative - tomcat native -->
-		<!--netty.tcnative.version>2.0.7.Final</netty.tcnative.version-->
+		<!--netty.tcnative.version>2.0.29.Final</netty.tcnative.version -->
 		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+		<error_prone.version>2.3.4</error_prone.version>
+		<jsr305.version>3.0.2</jsr305.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 	</properties>
 
@@ -59,6 +61,21 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java-util</artifactId>
 			<version>${protobuf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.errorprone</groupId>
+			<artifactId>error_prone_core</artifactId>
+			<version>${error_prone.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.errorprone</groupId>
+			<artifactId>error_prone_annotations</artifactId>
+			<version>${error_prone.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>${jsr305.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
 		explicitly required since Java 9 -->
