--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<!-- http://maven.apache.org/pom.html#Quick_Overview -->
 
 	<groupId>example.grpc</groupId>
-	<artifactId>hello-world-server</artifactId>
+	<artifactId>hello-grpc-server</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -30,7 +30,7 @@
 		<!-- contract brings gRPC dependencies with it -->
 		<dependency>
 			<groupId>example.grpc</groupId>
-			<artifactId>hello-world-contract</artifactId>
+			<artifactId>hello-grpc-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<!-- JUnit -->
