Update and clean dependencies

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,10 +16,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<java.version>11</java.version>
+		<java.version>1.8</java.version><!-- also compatible with 11 -->
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 
-		<exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 
 		<!-- application properties -->
 		<mainclass>example.grpc.server.HelloServer</mainclass>
@@ -33,13 +33,6 @@
 			<groupId>example.grpc</groupId>
 			<artifactId>hello-grpc-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-		<!-- JUnit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
