--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -23,67 +23,57 @@
 		<maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
 
 		<!-- gRPC properties -->
-		<grpc.version>1.28.0</grpc.version>
-		<protobuf.version>3.11.0</protobuf.version>
-		<protoc.version>3.11.4</protoc.version>
-		<!-- tcnative - tomcat native -->
-		<!--netty.tcnative.version>2.0.29.Final</netty.tcnative.version -->
+		<grpc.version>1.36.0</grpc.version>
+		<protoc.version>3.15.3</protoc.version>
 		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
-		<error_prone.version>2.3.4</error_prone.version>
+
 		<jsr305.version>3.0.2</jsr305.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 	</properties>
 
 	<dependencies>
-		<!-- gRPC dependencies -->
+		<!-- Common Annotations for the JavaTM Platform API
+			https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api 
+			explicitly required since Java 9 -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>${javax.annotation-api.version}</version>
+		</dependency>
+		<!-- 
+			gRPC dependencies 
+		-->
+		<!-- gRPC Protocol Buffers
+			https://mvnrepository.com/artifact/io.grpc/grpc-protobuf -->
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-protobuf</artifactId>
 			<version>${grpc.version}</version>
 		</dependency>
+		<!-- gRPC Stub support
+			https://mvnrepository.com/artifact/io.grpc/grpc-stub -->
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-stub</artifactId>
 			<version>${grpc.version}</version>
 		</dependency>
+		<!-- Netty is an asynchronous, event-driven, network application development framework.
+			https://mvnrepository.com/artifact/io.grpc/grpc-netty-shaded 
+			The library is shaded to prevent conflicts with other versions of Netty. 
+			More about shaded jars: https://stackoverflow.com/a/49811665/129497 -->
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-netty-shaded</artifactId>
 			<version>${grpc.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- gRPC Testing support
+			https://mvnrepository.com/artifact/io.grpc/grpc-testing -->
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-testing</artifactId>
 			<version>${grpc.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java-util</artifactId>
-			<version>${protobuf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.errorprone</groupId>
-			<artifactId>error_prone_core</artifactId>
-			<version>${error_prone.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.errorprone</groupId>
-			<artifactId>error_prone_annotations</artifactId>
-			<version>${error_prone.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>jsr305</artifactId>
-			<version>${jsr305.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api 
-			explicitly required since Java 9 -->
-		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>${javax.annotation-api.version}</version>
 		</dependency>
 	</dependencies>
 
