--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,7 +22,7 @@
 		<version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
 
 		<!-- application properties -->
-		<mainclass>example.grpc.client.HelloClient</mainclass>
+		<mainclass>pt.tecnico.grpc.client.HelloClient</mainclass>
 
 		<server.host>localhost</server.host>
 		<server.port>8080</server.port>
@@ -31,7 +31,7 @@
 	<dependencies>
 		<!-- contract brings gRPC dependencies with it -->
 		<dependency>
-			<groupId>example.grpc</groupId>
+			<groupId>pt.tecnico.sdis</groupId>
 			<artifactId>hello-grpc-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
