--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<!-- http://maven.apache.org/pom.html#Quick_Overview -->
 
-	<groupId>example.grpc</groupId>
+	<groupId>pt.tecnico.sdis</groupId>
 	<artifactId>hello-grpc-contract</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
