--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<!-- http://maven.apache.org/pom.html#Quick_Overview -->
 
-	<groupId>example.grpc</groupId>
+	<groupId>pt.tecnico.sdis</groupId>
 	<artifactId>hello-grpc-server</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -22,7 +22,7 @@
 		<version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
 
 		<!-- application properties -->
-		<mainclass>example.grpc.server.HelloServer</mainclass>
+		<mainclass>pt.tecnico.grpc.server.HelloServer</mainclass>
 
 		<server.port>8080</server.port>
 	</properties>
@@ -30,7 +30,7 @@
 	<dependencies>
 		<!-- contract brings gRPC dependencies with it -->
 		<dependency>
-			<groupId>example.grpc</groupId>
+			<groupId>pt.tecnico.sdis</groupId>
 			<artifactId>hello-grpc-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
