--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,30 +4,31 @@
 	<modelVersion>4.0.0</modelVersion>
 	<!-- http://maven.apache.org/pom.html#Quick_Overview -->
 
-	<groupId>example.grpc</groupId>
+	<groupId>pt.tecnico.sdis</groupId>
 	<artifactId>hello-grpc-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<name>${project.artifactId}</name>
 
+	<!-- Properties are variables used to customize the behavior of Maven and its plug-ins. -->
 	<properties>
-		<!-- compiler properties -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<version.java>1.8</version.java><!-- also compatible with 11 -->
+		<version.java>11</version.java>
 		
 		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
 		<version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
 
-		<!-- application properties -->
 		<mainclass>pt.tecnico.grpc.client.HelloClient</mainclass>
-
 		<server.host>localhost</server.host>
 		<server.port>8080</server.port>
 	</properties>
 
+	<!-- Dependencies are code archives - JARs - 
+		on which your current module needs in order to compile, build, test, and/or to run. 
+		When you execute a goal, these dependencies are resolved, and 
+		are then loaded from the local repository. -->
 	<dependencies>
 		<!-- contract brings gRPC dependencies with it -->
 		<dependency>
@@ -38,8 +39,10 @@
 	</dependencies>
 
 	<build>
+		<!-- Plug-ins allow for the reuse of common build logic across multiple projects. 
+		They do this by executing an "action" in the context of a project's description. -->
 		<plugins>
-			<!-- Plugin used to compile the sources of your project. Java 9 requires 
+			<!-- Plug-in used to compile the sources of your project. Java 9 requires 
 				at least version 3.7.0 to properly handle modules. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
