--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -8,25 +8,21 @@
 	<artifactId>hello-grpc-contract</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<name>${project.artifactId}</name>
 
+	<!-- Properties are variables used to customize the behavior of Maven and its plug-ins. -->
 	<properties>
-		<!-- compiler properties -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<version.java>1.8</version.java><!-- also compatible with 11 -->
+		<version.java>11</version.java>
 		
-		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
 		<version.os-maven-plugin>1.6.2</version.os-maven-plugin>
+		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
 		<version.maven-enforcer-plugin>1.4.1</version.maven-enforcer-plugin>
 
-		<!-- gRPC properties -->
 		<version.grpc>1.36.0</version.grpc>
 		<version.protoc>3.12.0</version.protoc><!-- aligned with the gRPC dependency version -->
-		<version.protobuf-maven-plugin>0.6.1</version.protobuf-maven-plugin>
-
 		<version.javax.annotation-api>1.3.2</version.javax.annotation-api>
 	</properties>
 
@@ -87,15 +83,17 @@
 	</dependencies>
 
 	<build>
+		<!-- An extension is a library that goes into Core classloader, 
+			unlike a plug-in that runs in a child classloader separated from other plug-ins. -->
 		<extensions>
-			<!-- Extension/plug-in that generates various useful platform-dependent 
-				project properties normalized from ${os.name} and ${os.arch} -->
+			<!-- Extension/plug-in that generates various useful platform-dependent project properties normalized from ${os.name} and ${os.arch} -->
 			<extension>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
-				<version>${version.os-maven-plugin}</version>
 			</extension>
 		</extensions>
+		<!-- Plug-ins allow for the reuse of common build logic across multiple projects. 
+		They do this by executing an "action" in the context of a project's description. -->
 		<plugins>
 			<!-- Plug-in used to compile the sources of your project. Java 9 requires 
 				at least version 3.7.0 to properly handle modules. -->
@@ -128,9 +126,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Plugin that provides goals to control certain environmental constraints 
-				such as Maven version, JDK version and OS family along with many more built-in 
-				rules and user created rules. -->
+			<!-- Plug-in that provides goals to control certain environmental constraints such as Maven version, JDK version and OS family along with many more built-in rules and user created rules. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -158,5 +154,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
